# trading-etl-python

./: .gitignore  README.md  roadmap.md
.github/workflows/: ci.yml
trading-etl-python/: docker-compose.yml  main.py  pyproject.toml
trading-etl-python/src/: settings.py
trading-etl-python/src/db/: backfill.py  setup.py
trading-etl-python/src/ingestion/: producer.py
trading-etl-python/src/processing/: consumer.py
trading-etl-python/tests/: test_backfill.py  test_consumer.py  test_processing_indicators.py  test_producer.py
