[project]
name = "trading-etl-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "kafka-python>=2.2.15",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.0.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]
[project.scripts]
producer = "src.ingestion.producer:main"
consumer = "src.processing.consumer:main"
api = "src.api.main:app"  # For uvicorn later
dashboard = "src.dashboard.app:streamlit_run"
[tool.uv]
package = true